--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  background: #ffff;
 }
 
 code {
@@ -16,6 +17,8 @@ code {
 #root, .App{
   width: 100%;
   height: 100%;
+  max-width: 375px;
+  margin: auto;
 }
 
 * {
@@ -27,4 +30,14 @@ code {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  border: none;
+}
+
+/*Hide scrollbar */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+*::-webkit-scrollbar {
+  display: none;
 }
