--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,9 +4,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
-  background: #ffff;
+  background: #F9FCFD;
 }
 
 code {
@@ -16,9 +16,10 @@ code {
 
 #root, .App{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-width: 375px;
   margin: auto;
+  background: #F9FCFD;
 }
 
 * {
