--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
-  background: #F9FCFD;
+  background: white;
 }
 
 code {
@@ -19,12 +19,12 @@ code {
   height: 100vh;
   max-width: 375px;
   margin: auto;
-  background: #F9FCFD;
+  background: white;
 }
 
 * {
   box-sizing: border-box;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   margin: 0;
   padding: 0;
   outline: none;
